# static-server

./: Cargo.toml  README.md
examples/: path.rs
my-app/: .env  README.md  package.json
my-app/public/: index.html
my-app/src/: App.css  App.tsx
my-app/src/demo/: index.tsx
my-app/src/screens/: index.tsx
src/: handler.rs  main.rs  model.rs
